# INF01008-OpenMP

./: .gitignore  CMakeLists.txt  README.md  flake.nix  hype.slurm  hype_base.slurm  hype_omp.slurm
Gradient_Descent/: Makefile  vtune500000.slurm
Gradient_Descent/src/: benchmark.cpp  utils.cpp
benchmark/: analysis.ipynb  run_experiments.sh
data/: download_dataset.sh  generate_dataset.py
src/gradient_descent/: benchmark.cpp  gradient_descent.cpp  gradient_descent.hpp  main.cpp  ref-scikit.py  ref.py  utils.h
src/impl_parallel_nan/: linear_regression.hpp
src/impl_sequential_nan/: main.cpp
src/normal_equations/: linear_regression.cpp  linear_regression.hpp  main.cpp  ref.py
